Fix spelling errors.
- Fix dialogNetwork and diglogServer. Removed the trailing 's'.
- Fixed spelling erro on field. Should have been Internal not External.
- Fixes issue #2.

--- a/src/opnsense/mvc/app/controllers/OPNsense/Netmaker/forms/dialogServer.xml
+++ b/src/opnsense/mvc/app/controllers/OPNsense/Netmaker/forms/dialogServer.xml
@@ -49,7 +49,7 @@
     </field>
     <field>
         <id>server.mqPortExt</id>
-        <label>Internal MQ Port</label>
+        <label>External MQ Port</label>
         <type>text</type>
         <help>IPv4 Port of the HQ Host, e.g. 8883</help>
     </field>
